[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/TextEdit.gd" type="Script" id=1]
[ext_resource path="res://Scripts/DatosPlayer.gd" type="Script" id=2]
[ext_resource path="res://Ecenas/EdificioCentral.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/TextEdit4.gd" type="Script" id=4]
[ext_resource path="res://Scripts/TextEdit2.gd" type="Script" id=5]
[ext_resource path="res://Scripts/TextEdit5.gd" type="Script" id=6]
[ext_resource path="res://Scripts/TextEdit3.gd" type="Script" id=7]
[ext_resource path="res://sprites/Ciudad Kosomeen.png" type="Texture" id=8]
[ext_resource path="res://sprites/End.png" type="Texture" id=9]
[ext_resource path="res://Scripts/menuDeInicio.gd" type="Script" id=10]
[ext_resource path="res://Scripts/ControladorCamara.gd" type="Script" id=11]
[ext_resource path="res://Ecenas/edificioDefault.tscn" type="PackedScene" id=12]

[node name="Ciudad" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -3.99997, 2 )
scale = Vector2( 3.82617, 3.08696 )
texture = ExtResource( 8 )

[node name="EdificioCentral" parent="." instance=ExtResource( 3 )]
position = Vector2( 513, 295 )
ciudad = 1

[node name="Camara" type="Node2D" parent="EdificioCentral"]
position = Vector2( -511, -294 )

[node name="Camera2D" type="Camera2D" parent="EdificioCentral/Camara"]
position = Vector2( 511, 294 )
z_index = 10
current = true
script = ExtResource( 11 )

[node name="PanelDatos" type="Panel" parent="EdificioCentral/Camara/Camera2D"]
margin_left = -512.0
margin_top = -298.0
margin_right = 513.0
margin_bottom = -231.0

[node name="TextEditcontaminacion" type="TextEdit" parent="EdificioCentral/Camara/Camera2D/PanelDatos"]
margin_left = 6.0
margin_top = 12.0
margin_right = 157.0
margin_bottom = 57.0
grow_horizontal = 0
grow_vertical = 0
text = "contaminacion
0%"
readonly = true
script = ExtResource( 1 )

[node name="TextEdit2" type="TextEdit" parent="EdificioCentral/Camara/Camera2D/PanelDatos"]
margin_left = 168.0
margin_top = 11.0
margin_right = 312.0
margin_bottom = 56.0
grow_horizontal = 0
grow_vertical = 0
text = "contaminacion
0%"
readonly = true
script = ExtResource( 5 )

[node name="TextEdit3" type="TextEdit" parent="EdificioCentral/Camara/Camera2D/PanelDatos"]
margin_left = 320.0
margin_top = 11.0
margin_right = 466.0
margin_bottom = 56.0
grow_horizontal = 0
grow_vertical = 0
text = "contaminacion
0%"
readonly = true
script = ExtResource( 7 )

[node name="TextEdit4" type="TextEdit" parent="EdificioCentral/Camara/Camera2D/PanelDatos"]
margin_left = 475.0
margin_top = 12.0
margin_right = 623.0
margin_bottom = 57.0
grow_horizontal = 0
grow_vertical = 0
text = "contaminacion
0%"
readonly = true
script = ExtResource( 4 )

[node name="TextEdit5" type="TextEdit" parent="EdificioCentral/Camara/Camera2D/PanelDatos"]
margin_left = 634.0
margin_top = 12.0
margin_right = 783.0
margin_bottom = 57.0
grow_horizontal = 0
grow_vertical = 0
text = "contaminacion
0%"
readonly = true
script = ExtResource( 6 )

[node name="TextEdit6" type="TextEdit" parent="EdificioCentral/Camara/Camera2D/PanelDatos"]
margin_left = 7.0
margin_top = 82.0
margin_right = 158.0
margin_bottom = 127.0
grow_horizontal = 0
grow_vertical = 0
text = "contaminacion
0%"
readonly = true
script = ExtResource( 1 )

[node name="TextEdit7" type="TextEdit" parent="EdificioCentral/Camara/Camera2D/PanelDatos"]
margin_left = 7.0
margin_top = 140.0
margin_right = 158.0
margin_bottom = 185.0
grow_horizontal = 0
grow_vertical = 0
text = "contaminacion
0%"
readonly = true
script = ExtResource( 1 )

[node name="TextEdit8" type="TextEdit" parent="EdificioCentral/Camara/Camera2D/PanelDatos"]
margin_left = 8.0
margin_top = 194.0
margin_right = 159.0
margin_bottom = 239.0
grow_horizontal = 0
grow_vertical = 0
text = "contaminacion
0%"
readonly = true
script = ExtResource( 1 )

[node name="TextEdit9" type="TextEdit" parent="EdificioCentral/Camara/Camera2D/PanelDatos"]
margin_left = 8.0
margin_top = 249.0
margin_right = 159.0
margin_bottom = 294.0
grow_horizontal = 0
grow_vertical = 0
text = "contaminacion
0%"
readonly = true
script = ExtResource( 1 )

[node name="Salir" type="Node2D" parent="EdificioCentral/Camara/Camera2D"]
position = Vector2( -513, -295 )
script = ExtResource( 10 )

[node name="ButtonInicio2" type="Button" parent="EdificioCentral/Camara/Camera2D/Salir"]
margin_left = 923.0
margin_top = 542.0
margin_right = 1039.0
margin_bottom = 605.0
icon = ExtResource( 9 )
flat = true
expand_icon = true

[node name="Inicio" type="Node2D" parent="EdificioCentral/Camara/Camera2D"]
visible = false
position = Vector2( 2, -47 )

[node name="ButtonInicio3" type="Button" parent="EdificioCentral/Camara/Camera2D/Inicio"]
margin_left = 410.0
margin_top = 247.0
margin_right = 526.0
margin_bottom = 310.0
icon = ExtResource( 9 )
flat = true
expand_icon = true

[node name="ActualizarCiudad" type="Node2D" parent="EdificioCentral/Camara/Camera2D"]
position = Vector2( 2, -47 )

[node name="ButtonActualizarCiudad" type="Button" parent="EdificioCentral/Camara/Camera2D/ActualizarCiudad"]
margin_left = 408.0
margin_top = 193.0
margin_right = 524.0
margin_bottom = 256.0
icon = ExtResource( 9 )
flat = true
expand_icon = true

[node name="Timer" type="Timer" parent="EdificioCentral"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="nivel 0" type="Node2D" parent="."]
visible = false

[node name="edificioDefault" parent="nivel 0" instance=ExtResource( 12 )]
position = Vector2( 298, 346 )

[node name="edificioDefault2" parent="nivel 0" instance=ExtResource( 12 )]
position = Vector2( 326, 178 )

[node name="edificioDefault3" parent="nivel 0" instance=ExtResource( 12 )]
position = Vector2( 703, 411 )

[node name="edificioDefault4" parent="nivel 0" instance=ExtResource( 12 )]
position = Vector2( 378, 458 )

[node name="nivel 1" type="Node2D" parent="."]
visible = false

[node name="nivel 2" type="Node2D" parent="."]
visible = false

[node name="nivel 3" type="Node2D" parent="."]

[connection signal="button_up" from="EdificioCentral/Camara/Camera2D/Salir/ButtonInicio2" to="EdificioCentral/Camara/Camera2D/Salir" method="_on_ButtonInicio2_button_up"]
[connection signal="button_up" from="EdificioCentral/Camara/Camera2D/Inicio/ButtonInicio3" to="EdificioCentral/Camara/Camera2D/Salir" method="_on_ButtonInicio2_button_up"]
[connection signal="button_up" from="EdificioCentral/Camara/Camera2D/ActualizarCiudad/ButtonActualizarCiudad" to="EdificioCentral" method="_on_ButtonActualizarCiudad_button_up"]
[connection signal="timeout" from="EdificioCentral/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EdificioCentral/Timer" to="EdificioCentral" method="_on_Timer_timeout"]
