[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/inicio.jpeg" type="Texture" id=1]
[ext_resource path="res://sprites/Start.png" type="Texture" id=2]
[ext_resource path="res://sprites/End.png" type="Texture" id=3]
[ext_resource path="res://Scripts/menuDeInicio.gd" type="Script" id=4]

[node name="pantalla inicio" type="Node"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 298.5 )
scale = Vector2( 0.801562, 0.613542 )
texture = ExtResource( 1 )

[node name="ButtonInicio" type="Button" parent="."]
margin_left = 310.0
margin_top = 432.0
margin_right = 478.0
margin_bottom = 520.0
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="ButtonInicio2" type="Button" parent="."]
margin_left = 539.0
margin_top = 432.0
margin_right = 707.0
margin_bottom = 520.0
icon = ExtResource( 3 )
flat = true
expand_icon = true

[connection signal="button_up" from="ButtonInicio" to="." method="_on_ButtonInicio_button_up"]
[connection signal="button_up" from="ButtonInicio2" to="." method="_on_ButtonSalir_button_up"]
